Added search box

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -19,9 +19,29 @@
             </div>
             <div class="container">
                 <div class="nav-item">Login</div>
-                <div class="nav-item">SignUp</div>
+                <div class="nav-item">Sign up</div>
             </div>
         </nav>
+        <div class="content">
+            <img alt="fail" src="./assets/images/logo.png" class="logo">
+            <h1>Discover the best food & drinks in Bhopal, MP</h1>
+
+            <div class="searchbox">
+                <div class="select">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <select>
+                        <option value="">Model town, New Delhi</option>
+                        <option value="">MP Nagar, Bhopal</option>
+                    </select>
+                </div>
+                <div class="sep"></div>
+                <div class="input">
+                    <i class="fas fa-search"></i>
+                    <input type="text" placeholder="Search for Restaurant, Cuisine or a Dish">
+                </div>
+            </div>
+        </div>
+
     </header>
 </body>
 
