Added Section box

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -43,6 +43,18 @@
         </div>
 
     </header>
+    <section class="nearby">
+        <div class="containerh3">
+            <h3>Popular localities in and around <b> New Market, Bhopal</b></h3>
+            <div class="box">
+                <div>New Market (11 Places)</div>
+                <div>
+                    <i class="fas fa-chevron-right"></i>
+
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
