Added Structure of App section

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -43,6 +43,7 @@
         </div>
 
     </header>
+
     <section class="nearby">
         <div class="containerh3">
             <h3>Popular localities in and around <b> New Market, Bhopal</b></h3>
@@ -52,6 +53,37 @@
                     <i class="fas fa-chevron-right"></i>
 
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="app">
+        <div class="container">
+            <img src="./assets/images/app.png" alt="Download image">
+            <div class="form">
+                <h1>Get the Zomato App</h1>
+                <small>We will send you a link, open it on your phone to download the app</small>
+                <div class="radio">
+                    <div>
+                        <input type="radio" id="email" name="radio-group" checked />
+                  <label for="email">Email</label>
+                    </div>
+                  <div><input type="radio" id="phone" name="radio-group" checked />
+                  <label for="phone">Phone</label>
+                  </div>
+                  
+                </div>
+                <div class="input">
+                      <input type="email" placeholder="Email">
+                      <button>Share App Link</button>
+                </div>
+                <div class="download">
+                    <img src="./assets/images/appStore.png" alt="IOS AppStore">
+                    <img src="./assets/images/playStore.png" alt="PlayStore">
+                </div>
+            </div>
+            
+
             </div>
         </div>
     </section>
