Fixed minor mistakes in header

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -87,6 +87,82 @@
             </div>
         </div>
     </section>
+
+    <section class="options">
+        <div class="container">
+            <h2>Explore other options for you here</h2>
+            <div>
+                <h3>Popular cuisines near me</h3>
+                <ul>
+                    <li>
+                        <a href="#">American food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Indian food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Mexican food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Bar food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Italian food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Thai food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Mexican food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Bar food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Italian food near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Thai food near me</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div>
+                <h3>Popular restaurant types near me</h3>
+                <ul>
+                    <li>
+                        <a href="#">Bakeries near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Bars near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Café near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Quick Bites near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Sandwich shops near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Bars near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Café near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Quick Bites near me</a>
+                    </li>
+                    <li>
+                        <a href="#">Sandwich shops near me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
